# hqg-algorithms

./: .gitignore  README.md  pyproject.toml
docs/: publishing.md
hqg_algorithms/: __init__.py  parsing.py  strategy.py  types.py  validate.py
tests/: test_extract.py  test_strategy.py  test_types.py  test_validate.py
