[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hqg-algorithms"
version = "1.0.1"
description = "Algorithmic trading research utilities for quant teams"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["hqg_algorithms"]

[project.urls]
Homepage = "https://github.com/Husky-Quantitative-Group/hqg-algorithms/"